Django_source/evProject/nohup.out
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 18 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
February 04, 2021 - 21:21:00
Django version 3.1.5, using settings 'evProject.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).
February 04, 2021 - 21:23:28
Django version 3.1.5, using settings 'evProject.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.
Watching for file changes with StatReloader
[04/Feb/2021 21:30:20] "GET / HTTP/1.1" 200 16351
[04/Feb/2021 21:30:20] "GET /static/admin/css/fonts.css HTTP/1.1" 304 0
[04/Feb/2021 21:30:21] "GET /static/admin/fonts/Roboto-Regular-webfont.woff HTTP/1.1" 304 0
[04/Feb/2021 21:30:21] "GET /static/admin/fonts/Roboto-Bold-webfont.woff HTTP/1.1" 304 0
[04/Feb/2021 21:30:21] "GET /static/admin/fonts/Roboto-Light-webfont.woff HTTP/1.1" 304 0
[04/Feb/2021 21:30:21] "GET / HTTP/1.1" 200 16351
[04/Feb/2021 21:30:23] "GET / HTTP/1.1" 200 16351
[04/Feb/2021 21:30:23] "GET / HTTP/1.1" 200 16351
[04/Feb/2021 21:54:59] "GET / HTTP/1.0" 200 16351
[04/Feb/2021 22:03:35] "GET / HTTP/1.1" 200 16351
[04/Feb/2021 22:03:35] "GET /static/admin/css/fonts.css HTTP/1.1" 200 423
[04/Feb/2021 22:03:35] "GET /static/admin/fonts/Roboto-Regular-webfont.woff HTTP/1.1" 200 85876
[04/Feb/2021 22:03:35] "GET /static/admin/fonts/Roboto-Bold-webfont.woff HTTP/1.1" 200 86184
[04/Feb/2021 22:03:35] "GET /static/admin/fonts/Roboto-Light-webfont.woff HTTP/1.1" 200 85692
Not Found: /favicon.ico
[04/Feb/2021 22:03:36] "GET /favicon.ico HTTP/1.1" 404 1981
/home/djangoserver/evProject/evProject/urls.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
February 04, 2021 - 21:23:35
Django version 3.1.5, using settings 'evProject.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.
Watching for file changes with StatReloader
Exception in thread django-main-thread:
Traceback (most recent call last):
  File "/usr/local/lib/python3.8/threading.py", line 932, in _bootstrap_inner
    self.run()
  File "/usr/local/lib/python3.8/threading.py", line 870, in run
    self._target(*self._args, **self._kwargs)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/utils/autoreload.py", line 53, in wrapper
    fn(*args, **kwargs)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/core/management/commands/runserver.py", line 118, in inner_run
    self.check(display_num_errors=True)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/core/management/base.py", line 392, in check
    all_issues = checks.run_checks(
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/core/checks/registry.py", line 70, in run_checks
    new_errors = check(app_configs=app_configs, databases=databases)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/core/checks/urls.py", line 13, in check_url_config
    return check_resolver(resolver)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/core/checks/urls.py", line 23, in check_resolver
    return check_method()
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/urls/resolvers.py", line 408, in check
    for pattern in self.url_patterns:
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/utils/functional.py", line 48, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/urls/resolvers.py", line 589, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/utils/functional.py", line 48, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/urls/resolvers.py", line 582, in urlconf_module
    return import_module(self.urlconf_name)
  File "/usr/local/lib/python3.8/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1014, in _gcd_import
  File "<frozen importlib._bootstrap>", line 991, in _find_and_load
  File "<frozen importlib._bootstrap>", line 975, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 671, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 779, in exec_module
  File "<frozen importlib._bootstrap_external>", line 916, in get_code
  File "<frozen importlib._bootstrap_external>", line 846, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/djangoserver/evProject/evProject/urls.py", line 22
    path('evcharger/",include('frontApp.urls'))
                               ^
SyntaxError: invalid syntax
/home/djangoserver/evProject/evProject/settings.py changed, reloading.
Performing system checks...

Watching for file changes with StatReloader
Exception in thread django-main-thread:
Traceback (most recent call last):
  File "/usr/local/lib/python3.8/threading.py", line 932, in _bootstrap_inner
    self.run()
  File "/usr/local/lib/python3.8/threading.py", line 870, in run
    self._target(*self._args, **self._kwargs)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/utils/autoreload.py", line 53, in wrapper
    fn(*args, **kwargs)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/core/management/commands/runserver.py", line 118, in inner_run
    self.check(display_num_errors=True)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/core/management/base.py", line 392, in check
    all_issues = checks.run_checks(
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/core/checks/registry.py", line 70, in run_checks
    new_errors = check(app_configs=app_configs, databases=databases)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/core/checks/urls.py", line 13, in check_url_config
    return check_resolver(resolver)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/core/checks/urls.py", line 23, in check_resolver
    return check_method()
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/urls/resolvers.py", line 408, in check
    for pattern in self.url_patterns:
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/utils/functional.py", line 48, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/urls/resolvers.py", line 589, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/utils/functional.py", line 48, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/home/djangoserver/djangoenv/lib/python3.8/site-packages/django/urls/resolvers.py", line 582, in urlconf_module
    return import_module(self.urlconf_name)
  File "/usr/local/lib/python3.8/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1014, in _gcd_import
  File "<frozen importlib._bootstrap>", line 991, in _find_and_load
  File "<frozen importlib._bootstrap>", line 975, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 671, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 779, in exec_module
  File "<frozen importlib._bootstrap_external>", line 916, in get_code
  File "<frozen importlib._bootstrap_external>", line 846, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/djangoserver/evProject/evProject/urls.py", line 22
    path('evcharger/",include('frontApp.urls'))
                               ^
SyntaxError: invalid syntax
/home/djangoserver/evProject/evProject/urls.py changed, reloading.
Performing system checks...

Watching for file changes with StatReloader
Not Found: /
[04/Feb/2021 22:41:01] "GET / HTTP/1.1" 404 2040
Not Found: /
[04/Feb/2021 22:42:54] "GET / HTTP/1.1" 404 2040
Not Found: /
[04/Feb/2021 22:42:55] "GET / HTTP/1.1" 404 2040
Not Found: /
[04/Feb/2021 22:42:55] "GET / HTTP/1.1" 404 2040
Not Found: /
[04/Feb/2021 22:42:55] "GET / HTTP/1.1" 404 2040
Not Found: /
[04/Feb/2021 22:42:56] "GET / HTTP/1.1" 404 2040
Not Found: /
[04/Feb/2021 22:42:56] "GET / HTTP/1.1" 404 2040
Not Found: /evcharger/
[04/Feb/2021 22:43:40] "GET /evcharger/ HTTP/1.1" 404 1978
/home/djangoserver/evProject/frontApp/views.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
February 04, 2021 - 22:40:44
Django version 3.1.5, using settings 'evProject.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.
